[package]
name = "wilee_core"
version = "0.1.0"
authors = ["Bastian Gonzalez Acevedo <bastiangonzalezacevedo@gmail.com>"]
edition = "2021"
license-file = "LICENSE.md"
description = "Wilee is scientific computing library and wilee_core is core part of this library"
repository = "https://github.com/BaGoA/Wilee"
readme = "README.md"
keywords = ["math", "scientific", "computing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
